[metadata]
name = cluedin-romaklimenko
version = 0.0.1
author = Roman Klimenko
author_email = romaklimenko@gmail.com
description = Python client for CluedIn API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CluedIn-io/cluedin.py
project_urls =
    Bug Tracker = https://github.com/romaklimenko/cluedin.py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = cluedin
packages = find:
python_requires = >=3.6

[options.packages.find]
where = cluedin